fixed ul gap color

--- a/odin-project/odin-css/flexbox/02-flex-header/style.css
+++ b/odin-project/odin-css/flexbox/02-flex-header/style.css
@@ -30,6 +30,7 @@
     margin: 0;
     padding: 0;
     gap: 8px;
+    background-color: papayawhip;
   }
   
   a {
